# card-shuffle

./: CMakeLists.txt  README.md  card.cpp  card.h  cards.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
